--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "https://ashishnikam111000.github.io/Crypto-Price/",
+  "homepage": "https://ashishnikam111000.github.io/Crypto-Price",
   "name": "crypto_price",
   "version": "0.1.0",
   "private": true,
